# marcOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
bootloader-old/: Makefile  README.md
bootloader-old/boot/: 32bit-gdt.asm  bootsect.asm  kernel_entry.asm
bootloader-old/kernel/: kernel.c
src/: main.rs  vga_screen.rs
